<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imag1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/insta02"
        android:contentDescription="@string/covid_19"
        />
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@id/imag1"
        android:layout_centerHorizontal="true"
        android:text="@string/covid_19"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginTop="15dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textSize="17sp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/coronavirus_disease_covid_19_is_an_infectious_disease_caused_by_a_new_virus_it_can_easily_spreads_from_an_infected_person_to_any_normal_person_so_please_stay_at_home_be_safe_and_keep_yourself_updated_through_our_app"
        />
        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv2"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:textColor="#fff"
            android:onClick="signup"
            />
        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:text="@string/log_in"
            android:onClick="onlogIn"
            />
    </RelativeLayout>
</ScrollView>
</RelativeLayout>