<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img2"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:src="@drawable/covid_logo_1_a"
                android:contentDescription="@string/sign_in_here"
                 />
            <TextView
                android:id="@+id/sign_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/sign_in_here"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:textSize="27sp"
                android:textColor="@color/colorAccent"
                />
            <TextView
                android:id="@+id/sign_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_text1"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:fontFamily="monospace"
                android:textSize="15sp"
                android:text="@string/all_we_have_to_fight_against_covid_19_we_will_only_get_out_of_this_together"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/sign_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/emailTIL">
                <EditText
                    android:id="@+id/emailEt"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/passL"
                android:layout_below="@id/emailTIL"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/pass"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
         <Button
                android:id="@+id/btn_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passL"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_in"
                android:textColor="#fff"
                android:fontFamily="serif"
                android:textSize="14sp"
                android:onClick="onSignIn"
                />
        </RelativeLayout>
</ScrollView>